--- a/pom.xml
+++ b/pom.xml
@@ -32,16 +32,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
+				<version>3.2.5</version>
 				<configuration>
 					<suiteXmlFiles>
 						TestNG suite XML files
-						<suiteXmlFile>src\main\resources\testng_PGDEV.xml</suiteXmlFile>
-						<suiteXmlFile>src\main\resources\testng_PGQAStaging.xml</suiteXmlFile>
-						<suiteXmlFile>src\main\resources\testng_PGQAStagingDomainz.xml</suiteXmlFile>
-						<suiteXmlFile>src\main\resources\testng_PGQAStagingNetregistry.xml</suiteXmlFile>
-						<suiteXmlFile>src\main\resources\testng_PGQAUat.xml</suiteXmlFile>
-						<suiteXmlFile>src\main\resources\testng_PGQAProduction.xml</suiteXmlFile>
+						<suiteXmlFile>src\main\resources\testng_CustomerFlow.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
